[gd_scene load_steps=4 format=3 uid="uid://dcry0lwlfq1d6"]

[ext_resource type="Script" path="res://scenes/network/online_menu/lobby.gd" id="1_rw0ao"]

[sub_resource type="InputEventKey" id="InputEventKey_5whnk"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_2rsgc"]
events = [SubResource("InputEventKey_5whnk")]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rw0ao")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.237985, 0.534776, 0.515603, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="UserIdentity" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/UserIdentity"]
layout_mode = 2
theme_override_constants/margin_right = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/UserIdentity/MarginContainer"]
layout_mode = 2
text = "Player Name"

[node name="PlayerName" type="LineEdit" parent="MarginContainer/VBoxContainer/UserIdentity"]
layout_mode = 2
text = "Default"
expand_to_text_length = true
caret_blink = true

[node name="ServerConnection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ServerConnection"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ServerConnection/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server Adress"

[node name="ServerAdress" type="LineEdit" parent="MarginContainer/VBoxContainer/ServerConnection"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
caret_blink = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/ServerConnection"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/ServerConnection/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server Port"

[node name="ServerPort" type="LineEdit" parent="MarginContainer/VBoxContainer/ServerConnection"]
layout_mode = 2
size_flags_horizontal = 3
text = "7000"
caret_blink = true

[node name="ConnectButton" type="Button" parent="MarginContainer/VBoxContainer/ServerConnection"]
layout_mode = 2
text = "Connect !"

[node name="ConnectedData" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ConnectedData"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerTitle" type="Label" parent="MarginContainer/VBoxContainer/ConnectedData/PlayerList"]
layout_mode = 2
text = "Players"

[node name="ListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ConnectedData/PlayerList"]
layout_mode = 2
size_flags_vertical = 3

[node name="Chat" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ConnectedData"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatTitle" type="Label" parent="MarginContainer/VBoxContainer/ConnectedData/Chat"]
layout_mode = 2
text = "Chat"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ConnectedData/Chat"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ConnectedData/Chat/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="SendChat" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SendChat"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/SendChat/HBoxContainer"]
layout_mode = 2
text = "Return"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SendChat"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MessageLine" type="LineEdit" parent="MarginContainer/VBoxContainer/SendChat/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Chat with friends !"
caret_blink = true

[node name="SendMessageButton" type="Button" parent="MarginContainer/VBoxContainer/SendChat/HBoxContainer2"]
layout_mode = 2
shortcut = SubResource("Shortcut_2rsgc")
text = "Send !"
